force-app/main/default/objects/Opportunity/fields/Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Amount__c</fullName>
    <label>Opportunity Amount</label>
    <summarizedField>Opportunity_Line_Item__c.Amount__c</summarizedField>
    <summaryForeignKey>Opportunity_Line_Item__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>