force-app/main/default/objects/Opportunity/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <label>Total Hours</label>
    <summarizedField>Opportunity_Line_Item__c.Hours_Quantity__c</summarizedField>
    <summaryForeignKey>Opportunity_Line_Item__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>