force-app/main/default/objects/Opportunity/validationRules/Invalid_Date_Interval.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Date_Interval</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorMessage>Invalid date range. The start date cannot be greater than the end date. Try again !!</errorMessage>
</ValidationRule>