force-app/main/default/objects/Opportunity/validationRules/Project_Manager_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Manager_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>!ISPICKVAL(Project_Manager__r.Rol__c, &apos;Project Manager&apos;)</errorConditionFormula>
    <errorMessage>The User assigned to this opportunity must be Project Manager.</errorMessage>
</ValidationRule>